# coCPM

./: .gitignore  .python-version  README.md  pyproject.toml  run_eval.sh
eval/: codesurv_low  desurv_low  estcodesurv_low  estdesurv_low  esteval_codesurv_0.1  esteval_codesurv_0.5  esteval_codesurv_1.0  esteval_codesurv_1.5  esteval_codesurv_2.0  esteval_codesurv_oracle  esteval_desurv  eval_codesurv_0.1  eval_codesurv_1.0  eval_codesurv_oracle  eval_desurv  t_1codesurv_low  t_1desurv_low  t_1eval_desurv  t_2codesurv_low  t_2desurv_low  t_2eval_desurv  t_3codesurv_low  t_3desurv_low  t_3eval_desurv  t_4codesurv_low  t_4desurv_low  t_4eval_desurv  t_5codesurv_low  t_5desurv_low  t_5eval_desurv
eval/logs/: batch_job_19814070.out  batch_job_19814070.stats  output_19814072.out  output_19814072.stats  output_19814073.out  output_19814073.stats  output_19814074.out  output_19814074.stats  output_19814075.out  output_19814075.stats  output_19814076.out  output_19814076.stats
my-virtual-env-icelake/: pyvenv.cfg
notebook/: eval_codesurv.ipynb  sim_codesurv.ipynb  simulated_example_v0.ipynb  simulated_example_v1.ipynb
scripts/: eval_sim.py  gen_data.py
scripts/workflow/: evaluate.py
src/models/: DeSurv.py  coDeSurv.py
src/utils/: helpers.py  utils.py
