[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "coCPM"
version = "0.1.0"
description = "A package for consistent Clinical Prediction Model"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Woojung Kim", email = "kwj0507@gmail.com"},
]
dependencies = [
    "pandas",
    "numpy==1.26.4",
    "scikit-learn",
    "torch",
    "lifelines",
    "seaborn",
    "tqdm",
    "scikit-survival",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]